Added a readme with the step by step to fix issues

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <h1>Welcome to Twitter</h1>
-        <p>Twitter... If it was good</p>
+        <p>Twitter... But better</p>
     </div>
 </body>
 </html>
